--- a/Cyber_Security_101/7.Networking Concepts.md
+++ b/Cyber_Security_101/7.Networking Concepts.md
@@ -2,7 +2,7 @@
 
 
 ## 실습 일시
- - 2025-10-22
+ - 2025-10-22 ~ 2022-10-27
 
 
 ## 실습 주제
@@ -63,36 +63,45 @@
    cf) <img width="1336" height="678" alt="스크린샷 2025-10-22 115008" src="https://github.com/user-attachments/assets/947529a9-d035-4346-9376-490fdd12a0f5" />
 
 (6) Encapsulation
- - 우리가 이번 장에서 배운 네트워크 명령어들은 기본적인 명령어들이다.
- - 추가적인 명령어들이 많기 때문에 우리는 배움을 게을리 해서는 안된다.
+ - 이번 장에서는 다른 주요 컨셉인 캡슐화(Encapsulation)에 대해서 배울 것이다. 이 개념은 간단히 말하자면 데이터가 층을 지나가면서 점점 정보들을 가진 헤더가 붙는 것이다.
+ - 캡슐화는 크게 다음과 같은 네가지 과정을 거친다.
+   1) Application data : 이 과정은 우리가 애플리케이션에 데이터를 보내는 모든 경우에 발생하며, 무슨 프로토콜이 사용되었는지와 같은 부가적인 정보를 첨부시킨다.
+   2) Transport protocol segment or datagram : TCP, UDP 등이 있는 전송 계층에서는 정보를 담고 있는 헤더인 TCP segment, UDP datagram을 첨부시켜 네트워크 계층으로 보낸다.
+   3) Network packet : 이 계층에서는 받은 TCP segment 혹은 UDP datagram에 IP헤더를 붙여서 데이터 링크 계층으로 보낸다.
+   4) Data link frame : 이더넷과 와이파이가 IP패킷을 받고 적절한 헤더와 트레일러를 첨부시켜 프레임을 만든다.
+ - <img width="790" height="189" alt="스크린샷 2025-10-22 112000" src="https://github.com/user-attachments/assets/a473a6f2-7839-4d66-b492-a1fa8dc7b6db" />
 
 (7) Telnet
-
+ - telnet(Teletype Network)은 원격 터미널 연결을 하는 네트워크 프로토콜이다.
+ - 이번 실습 시에 목표로 할 서버는 다음 세가지이다.
+   1) Echo server : 이 서버는 사용자가 보낸 모든 것을 널리 퍼뜨리게 한다. 7번 포트를 사용한다.
+   2) Daytime server : 13번 포트를 기본적으로 사용하고 현재 날짜와 시간을 응답한다.
+   3) Web(HTTP) server : 기본적으로 TCP 80번 포트를 사용하고 웹페이지를 제공한다.
+ - telnet targetIPAddress PortNumber : telnet 접속 명령어 
 
 (8) Conclusion
+ - 이제까지 뭘 배웠는지에 대한 간단한 복습
    
 
 ## 사용 도구 및 명행령어   
  - ipconfig : 자신의 ip주소를 보여준다.
  - <img width="790" height="189" alt="스크린샷 2025-10-22 112000" src="https://github.com/user-attachments/assets/8939441a-62bd-41ae-8b66-db80b70c217b" />
-
+ - telnet 10.201.94.181 7 : Echo server 에 접속한다.
+ - telnet 10.201.94.181 13 : Daytime server에 접속한다. 서버는 시간을 보여주고 자동으로 접속을 종료시킨다.
+ - telnet 10.201.94.181 80 : 해당 웹페이지로 접속한다.
 
 ## 배운 점
- - 느린 네트워크 환경이나 자원이 제한된 환경에서 자원소모가 적다는 CLI의 장점이 부각된다는 것을 배웠다.
- - 각 네트워크 명령어 뿐만 아니라 netstat -a,-b,-o,-n과 같이 그에 사용할 수 있는 옵션들에 대해서도 많이 배웠다.
- - 프로세스를 관리하는 명령어인 tasklist와 taskkill에 대해서 청므 배웠다.
-
+ - 대부분 학교에서 배웠거나 정보처리기사를 준비할 때 배웠던 내용이라 새롭게 배웠던 내용은 없었던 것 같다.
+ - 나는 원래 Transport Layer의 단위가 세그먼트인 줄 알았는데 TCP, UDP에 따라 세그먼트, 데이터그램으로 명칭이 바뀌는 것인 줄 처음 알았다.
 
 ## 실무 적용 가능성
- - 애초에 CLI가 우리가 흔히 쓰는 GUI의 상위호환과 같은 것이기에 컴퓨터를 사용하며 업무를 진행하는 이상 손발처럼 사용해야 한다는 것을 느꼈다.
- - 만약 내가 회사에 들어가서 실무를 윈도우로 하는 이상 오늘 배운 내용은 내가 은퇴할 때까지 사용해야 한다고 생각한다.
- - 실무 적용 가능성이 대단히 높다.
+ - 정말 기본적인 내용이라 컴퓨터를 사용하면서 밥 벌어 먹으려면 기본적으로 알아야 하는 내용이라고 생각해서 이론적으로는 많이 스일 것 같지만 실습에서는 거의 쓰이지 않을 것 같다.
+ - telnet 접속 문법이나 포트 번호를 외우는 정도는 실습에서 쓰일 것 같다. 하지만 telnet 접속이 필요한 경우에 대해서는 잘 모르겠다.
 
 
 ## 느낀 점
- - 오늘 배운 명령어 중에는 처음으로 배운 명령어도 있고 새롭게 배운 명령어도 존재한다. 하지만 학습하는 데 크게 어려움을 느끼지는 않았다.
- - 내용의 수준이 조금 낮다보니 내가 이걸 배우는 것이 많이 늦었구나 라고 느꼈다. 다른 사람보다 뒤처진다는 느낌이 많이 들었다.
- - 실습과 학습을 계속 해야겠지만 더 빨리 나가는 것이 좋지 않을까라는 생각도 들었다.
+ - 이미 배웠던 내용들을 다시 배우니 복습한다는 느낌이 많이 들었다. 잊어버렸던 내용들도 다시 보니 많이 생각이 났고 내용 이해가 예전보다는 쉽게 되었다.
+ - 기본적인 내용이어서 지금 이걸 하면 남보다 뒤처지는거 아닌가 생각도 들었지만 기본을 단단히 잡고 간다는 생각으로 마음을 바로 잡았다.
    
 ## 실습 화면 기록
-![실습 결과](images/Window_Command_Line.png)
+![실습 결과](images/networking_Concepts.png)
