--- a/Cyber_Security_101/7.Networking Concepts.md
+++ b/Cyber_Security_101/7.Networking Concepts.md
@@ -97,13 +97,14 @@
 
 
 ## 실무 적용 가능성
- - 정말 기본적인 내용이라 컴퓨터를 사용하면서 밥 벌어 먹으려면 기본적으로 알아야 하는 내용이라고 생각해서 이론적으로는 많이 스일 것 같지만 실습에서는 거의 쓰이지 않을 것 같다.
- - telnet 접속 문법이나 포트 번호를 외우는 정도는 실습에서 쓰일 것 같다. 하지만 telnet 접속이 필요한 경우에 대해서는 잘 모르겠다.
+ - 이번 실습에서 다룬 TCP, UDP 그리고 포트 개념은 향후 시스템 보안 점검이나 네트워크 트래픽 분석 시 필수적인 기반 지식이다.
+ - telnet은 보안 취약점 때문에 실무에서 직접 사용되진 않지만, 네트워크 트러블슈팅 시 포트 접근 테스트 용도로 여전히 유용하다.
 
 
 ## 느낀 점
  - 이미 배웠던 내용들을 다시 배우니 복습한다는 느낌이 많이 들었다. 잊어버렸던 내용들도 다시 보니 많이 생각이 났고 내용 이해가 예전보다는 쉽게 되었다.
- - 기본적인 내용이어서 지금 이걸 하면 남보다 뒤처지는거 아닌가 생각도 들었지만 기본을 단단히 잡고 간다는 생각으로 마음을 바로 잡았다.
+ - 기본적인 내용이지만, 이 단계를 통해 상위 개념(패킷 분석, 포트 스캐닝)의 토대를 명확히 다질 수 있었다.
+ - 앞으로 이 내용을 기반으로 실제 패킷 캡처, 포트 스캔, 방화벽 규칙 분석까지 실습을 확장할 생각이다.
 
    
 ## 실습 화면 기록
