--- a/Cyber_Security_101/4.Windows PowerShell.md
+++ b/Cyber_Security_101/4.Windows PowerShell.md
@@ -20,14 +20,11 @@
  - 파워쉘은 윈도우용으로 시작되있지만 시간이 지나면서 맥이나 리눅스 운영체제에서도 사용할 수 있도록 확장하였다.
         
 (3) PowerShell Basics
- - TCP/IP 모델이란, Transmission Control Protocol/Internet Protocol model의 약어로 1970년대에 DoD(Department of Defense)에 의해 개발되었다.
- - 이 모델의 장점은 군사적 공격과 같은 방해를 받을 때도 네트워크 기능을 지속하도록 돕는 것에 있다.
- - 이 모델의 각 계층을 OSI 모델과 비교하자면 다음과 같다.
-   1) Application Layer : OSI 7 Layer - Application Layer + Presentation Layer + Session Layer
-   2) Transport Layer : OSI 7 Layer - Transport Layer
-   3) Internet Layer : OSI 7 Layer - Network Layer
-   4) Link Layer : OSI 7 Layer - Data Link Layer
- - 어떤 책에서는 TCP/IP 모델을 Physical Layer을 포함해서 5개의 계층으로 묘사하지만 여기서는 4계층으로 묘사하겠다.
+ - 파워셀 실행과 간단한 메뉴 설명
+   1) Start Menu
+   2) Run Dialog
+   3) File Explorer
+   4) Task Manager
  
 (4) Navigating the File System and Working with Files
  - 우리는 원활한 통신과 정확한 통신을 위해 개인을 특정할 수 있는 코드들이 필요하다. 이때 쓰이는 코드들이 우리가 잘 아는 IP 주소이다.
