--- a/Cyber_Security_101/4.Windows PowerShell.md
+++ b/Cyber_Security_101/4.Windows PowerShell.md
@@ -2,7 +2,7 @@
 
 
 ## 실습 일시
- - 2025-11-3
+ - 2025-11-3~12
 
 
 ## 실습 주제
@@ -21,11 +21,16 @@
         
 (3) PowerShell Basics
  - 파워셀 실행과 간단한 메뉴 설명
-   1) Start Menu
-   2) Run Dialog
-   3) File Explorer
-   4) Task Manager
- 
+   1) Start Menu : 윈도우 시작 메뉴에 있는 검색창의 파워쉘 버전이다.
+   2) Run Dialog : 실행 목록을 보여주는 메뉴이다.
+   3) File Explorer : 폴더의 네비게이터이다. 우리가 아는 윈도우 디렉터리 파인더의 파워쉘 버전이다.
+   4) Task Manager : 작업관리자는 여는 메뉴이다.
+ - 파워쉘 명령어는 cmdlets(command-lets)로 잘 알려져 있다. 이건 전통적인 윈도우 명령어보다 더 강력하고 데이터 조작시에 여러가지 고급 옵션들을 제공해준다.
+ - 기본적인 cmdlets
+   1) Get-Command : 파워쉘에서 사용할 수 있는 명령어들의 목록을 보여준다.
+   2) Get-Help : 명령어의 쓰임새, 파라미터값, 사용예시 등을 알려준다.
+ - 파워쉘의 강력한 특징 중 하나는 추가적인 cmdlets나 온라인 저장소를 다운로드 받아 사용하여 기능을 확장하는데 있다.   
+
 (4) Navigating the File System and Working with Files
  - 우리는 원활한 통신과 정확한 통신을 위해 개인을 특정할 수 있는 코드들이 필요하다. 이때 쓰이는 코드들이 우리가 잘 아는 IP 주소이다.
  - IP 주소의 구성은 다음 그림과 같다.
