--- a/Cyber_Security_101/4.Windows PowerShell.md
+++ b/Cyber_Security_101/4.Windows PowerShell.md
@@ -32,15 +32,11 @@
  - 파워쉘의 강력한 특징 중 하나는 추가적인 cmdlets나 온라인 저장소를 다운로드 받아 사용하여 기능을 확장하는데 있다.   
 
 (4) Navigating the File System and Working with Files
- - 우리는 원활한 통신과 정확한 통신을 위해 개인을 특정할 수 있는 코드들이 필요하다. 이때 쓰이는 코드들이 우리가 잘 아는 IP 주소이다.
- - IP 주소의 구성은 다음 그림과 같다.
- - <img width="910" height="415" alt="스크린샷 2025-10-22 111546" src="https://github.com/user-attachments/assets/e02f9420-76bd-4bed-89f3-ef122fa4ec70" />
- - 자신의 IP주소는 터미널에 ipconfig 명령어를 사용하면 된다.
- - IP주소는 사설 IP주소와 공공 IP주소로 나눠지는데 사설 IP 주소의 범위는 다음과 같이 정해져 있다. 그 외에는 전부 공공 IP 주소이다.
-   1) 10.0.0.0 ~ 10.255.255.255
-   2) 172.16.0.0 ~ 172.31.255.255
-   3) 192.168.0.0 ~ 192.168.255.255
- - 라우팅 : 라우터는 쿠팡 허브와 같다. 우리가 물품을 주문할 시 쿠팡 허브를 통해 건너건너 오듯 우리 통신 패킷들도 라우터들을 통해 건너건너 온다. 이러한 일련의 과정들을 라우팅이라 한다.
+ - Get-ChildItem : 윈도우의 dir, 유닉스의 ls와 같은 역할을 하는 명령어로 디렉터리와 경로를 보여주며 디렉터리나 컨텐츠를 찾는 역할을 한다.
+ - Set-Directory : 윈도우의 cd와 비슷한 역할을 하는 명령어로 다른 디렉터리로 가는 역할을 한다.
+ - New-Item : 새로운 디렉터리나 파일을 생성하는 명령어이다.
+ - Remove-Item : 디레거리나 파일을 제거하는 명령어이다.
+ - Get-Content : 윈도우의 type, 유닉스의 cat 명령어와 같은 역할로 파일이나 디렉터리의 내용을 읽고 보여준다.
 
 (5) Piping, Filtering, and Sorting Data
  - UDP(User Datagram Protocol) : 간단한 비연결형 프로토콜로 전송 계층에서 동작한다. 비연결형이기에 연결이 필요 없고 그렇기에 내가 보낸 패킷이 잘 도착했는지 알 방법이 없다.
