--- a/Cyber_Security_101/8.Linux_Shells.md
+++ b/Cyber_Security_101/8.Linux_Shells.md
@@ -1,8 +1,8 @@
 ## TryHackMe: Linux Shells
-
+8 0k 2727 0k
 
 ## 실습 일시
- - 2025-12-15
+ - 2025-12-15~
 
 
 ## 실습 주제
@@ -31,32 +31,34 @@
  - Z Shell(Zsh) : 사전에 설치되어 있는 쉘은 아니지만 여러 쉘들의 기능이 결합되어있어 현대적이고 기능적인 쉘이다.   
 
 (4) Shell Scripting and Components
- - 우리는 원활한 통신과 정확한 통신을 위해 개인을 특정할 수 있는 코드들이 필요하다. 이때 쓰이는 코드들이 우리가 잘 아는 IP 주소이다.
- - IP 주소의 구성은 다음 그림과 같다.
- - <img width="910" height="415" alt="스크린샷 2025-10-22 111546" src="https://github.com/user-attachments/assets/e02f9420-76bd-4bed-89f3-ef122fa4ec70" />
- - 자신의 IP주소는 터미널에 ipconfig 명령어를 사용하면 된다.
- - IP주소는 사설 IP주소와 공공 IP주소로 나눠지는데 사설 IP 주소의 범위는 다음과 같이 정해져 있다. 그 외에는 전부 공공 IP 주소이다.
-   1) 10.0.0.0 ~ 10.255.255.255
-   2) 172.16.0.0 ~ 172.31.255.255
-   3) 192.168.0.0 ~ 192.168.255.255
- - 라우팅 : 라우터는 쿠팡 허브와 같다. 우리가 물품을 주문할 시 쿠팡 허브를 통해 건너건너 오듯 우리 통신 패킷들도 라우터들을 통해 건너건너 온다. 이러한 일련의 과정들을 라우팅이라 한다.
-
+ - 쉘을 이용해서 스크립트를 짜는 방법을 배워볼 것이다.
+ - Variables
+   1) nano first_script.sh : 파일 이름이 first_script인 Shebang파일을 만들어낸다.
+   2) echo "Hey, what's your name? : 이름이 무엇인지 물어보는 문장을 출력한다.
+   3) read name : 이름을 입력 받는다.
+   4) echo "Welcome, $name" : 사용자가 입력한 이름을 변수에 저장하고 저장한 변수와 같이 출력한다.
+   5) chmod +x first_script.sh : 해당 파일에 대해 사용자에게 실행 권한을 추가시킨다.
+ - Loops
+   1) for i in {1..10}; : 변수 i를 만들고 10번 반복하는 반복문을 만든다.
+   2) do : 반복문의 시작을 알리는 코드이다.
+   3) echo $i : 변수 i의 값을 출력한다.
+   4) done : 반복문의 종료를 알리는 코드이다.
+ - Conditional Statments
+   1) echo "Please enter your name!" : 이름을 적으라는 문장을 출력한다.
+   2) read name : 사용자가 입력한 값을 name이란 변수를 만들어 여기에 저장한다.
+   3) if [ "$name" = "Stewart" ]; then : 조건문의 조건을 명시한다. 조건이 맞았을 시에 다음 문장이 실행된다.
+   4)  echo "Welcome Stewart! Here is the Secret: THM_Script" : 설정된 문장을 출력한다.
+   5) else : 조건이 맞지 않았을 때의 실행될 코드를 말한다,
+   6)  echo "Sorry! You are not authorized to access the secret." : 설정된 문자을 출력한다.
+   8) fi : 조건문의 종료를 알리는 코드이다.
+ - Comments
+   1) # : 말하려는 문자 앞에 이것을 붙이면 해당 줄의 문장은 주석처리가 된다.
+ 
 (5) The Locker Script
- - UDP(User Datagram Protocol) : 간단한 비연결형 프로토콜로 전송 계층에서 동작한다. 비연결형이기에 연결이 필요 없고 그렇기에 내가 보낸 패킷이 잘 도착했는지 알 방법이 없다.
- - TCP(Transmission Control Protocol) : 연결 지향적인 전송 프로토콜이다. 데이터 전송 전에 연결을 수립할 필요가 있고 그에 맞게 안전한 데이터 전송을 보장한다. TCP 연결은 3-way handshake라는 다음의 과정을 거쳐 수립된다.
-   1) SYN Packet : 클라이언트가 서버에게 SYN(Synchronise)패킷을 보냄으로써 연결을 시도한다. 이 패킷은 클라이언트가 정한 시작 시퀸스 번호를 가진다.
-   2) SYN-ACK Packet : 서버는 SYN패킷에 대한 응답으로 클라이언트에게 SYN-ACK 패킷을 보낸다. 이 패킷에는 시퀸스 번호 뒤에 서버가 정한 무작위 번호가 추가된다.
-   3) ACK Packet : 클라이언트는 SYN-ACK Packet의 회답으로 서버에게 ACK(Acknowledge)패킷을 보내고 3-way handshake과정이 끝났음을 알린다.
-   cf) <img width="1336" height="678" alt="스크린샷 2025-10-22 115008" src="https://github.com/user-attachments/assets/947529a9-d035-4346-9376-490fdd12a0f5" />
+ - 이름, 회사 이름, 핀번호 4자리를 사용자에게 입력받고 조건문을 통해서 출력문을 달리하는 간단한 코드
 
 (6) Practical Exercise
- - 이번 장에서는 다른 주요 컨셉인 캡슐화(Encapsulation)에 대해서 배울 것이다. 이 개념은 간단히 말하자면 데이터가 층을 지나가면서 점점 정보들을 가진 헤더가 붙는 것이다.
- - 캡슐화는 크게 다음과 같은 네가지 과정을 거친다.
-   1) Application data : 이 과정은 우리가 애플리케이션에 데이터를 보내는 모든 경우에 발생하며, 무슨 프로토콜이 사용되었는지와 같은 부가적인 정보를 첨부시킨다.
-   2) Transport protocol segment or datagram : TCP, UDP 등이 있는 전송 계층에서는 정보를 담고 있는 헤더인 TCP segment, UDP datagram을 첨부시켜 네트워크 계층으로 보낸다.
-   3) Network packet : 이 계층에서는 받은 TCP segment 혹은 UDP datagram에 IP헤더를 붙여서 데이터 링크 계층으로 보낸다.
-   4) Data link frame : 이더넷과 와이파이가 IP패킷을 받고 적절한 헤더와 트레일러를 첨부시켜 프레임을 만든다.
- - <img width="1416" height="588" alt="스크린샷 2025-10-27 105304" src="https://github.com/user-attachments/assets/e22ee653-2d9f-4503-8b35-7e5d8d4e4f09" />
+ - sudo ./flag_hunt.sh : 루트계정으로 해당 파일을 실행. 권한을 다 무시하고 열 수 있다.
 
 (7) Conclusion
  - telnet(Teletype Network)은 원격 터미널 연결을 하는 네트워크 프로토콜이다.
@@ -68,31 +70,17 @@
 
 (8) Conclusion
  - 이제까지 뭘 배웠는지에 대한 간단한 복습
-   
-
-## 사용 도구 및 명행령어   
- - ipconfig : 자신의 ip주소를 보여준다.
- - <img width="790" height="189" alt="스크린샷 2025-10-22 112000" src="https://github.com/user-attachments/assets/8939441a-62bd-41ae-8b66-db80b70c217b" />
- - telnet 10.201.94.181 7 : Echo server 에 접속한다.
- - telnet 10.201.94.181 13 : Daytime server에 접속한다. 서버는 시간을 보여주고 자동으로 접속을 종료시킨다.
- - telnet 10.201.94.181 80 : 해당 웹페이지로 접속한다.
-
-   
-## 배운 점
- - 대부분 학교에서 배웠거나 정보처리기사를 준비할 때 배웠던 내용이라 새롭게 배웠던 내용은 없었던 것 같다.
- - 나는 원래 Transport Layer의 단위가 세그먼트인 줄 알았는데 TCP, UDP에 따라 세그먼트, 데이터그램으로 명칭이 바뀌는 것인 줄 처음 알았다.
 
 
 ## 실무 적용 가능성
- - 이번 실습에서 다룬 TCP, UDP 그리고 포트 개념은 향후 시스템 보안 점검이나 네트워크 트래픽 분석 시 필수적인 기반 지식이다.
- - telnet은 보안 취약점 때문에 실무에서 직접 사용되진 않지만, 네트워크 트러블슈팅 시 포트 접근 테스트 용도로 여전히 유용하다.
+ - 리눅스에 사용하는 간단한 명령어부터 쉥에 대한 조작 명령어, 리눅스에서 스크립트를 작성하는 법까지 배웠는데 현장에서는 리눅스를 많이 쓴다고 하니 오늘 배운 지식은 잊어버리더라도 금방 다시 떠올릴 수 있게 해야한다.
+ - 현장에서 컴파일러로 무엇을 쓸지는 알 수 없지만 컴파일러 없이도 스크립트를 작성할 수 있는 능력을 현장에서 중요하게 볼 것 같다.  
 
 
 ## 느낀 점
- - 이미 배웠던 내용들을 다시 배우니 복습한다는 느낌이 많이 들었다. 잊어버렸던 내용들도 다시 보니 많이 생각이 났고 내용 이해가 예전보다는 쉽게 되었다.
- - 기본적인 내용이지만, 이 단계를 통해 상위 개념(패킷 분석, 포트 스캐닝)의 토대를 명확히 다질 수 있었다.
- - 앞으로 이 내용을 기반으로 실제 패킷 캡처, 포트 스캔, 방화벽 규칙 분석까지 실습을 확장할 생각이다.
-
-   
+ - 요즘 너무 스크립트 작성같은 것을 등한시해서 작성하는데 어려움이 많았다.
+ - 리눅스에 대해 기초적이고 개념적인 것만 배웠는데 이렇게 쉘을 통해서 실습을 하니 예전 처음 코딩했을 때가 생각났다.
+ - 요즘 들어 정보보안이라는 진로에 대해 의구심이 많이 생겼으나 이번 실습으로 인하여 그러한 의구심이 조금은 해소된 느낌이 들었다.
+    
 ## 실습 화면 기록
-![실습 결과](images/Networking_Concepts.png)
+![실습 결과](images/Linux_Shells.png)
