--- a/Cyber_Security_101/9.Networking Essentials.md
+++ b/Cyber_Security_101/9.Networking Essentials.md
@@ -2,7 +2,7 @@
 
 
 ## 실습 일시
- - 2025-12-23, 12-30
+ - 2025-12-23, 12-30, 2026-01-07
 
 
 ## 실습 주제
@@ -30,7 +30,7 @@
    1) DHCP Discover : 사용자는 DHCPDISCOVER메시지를 브로드캐스트하여 어딘가에 있을 서버에 보낸다.
    2) DHCP Offer : 서버는 DHCPOFFER메시지를 베정할 IP주소와 함께 클라이언트에게 응답한다.
    3) DHCP Request : 클라이언트는 서버가 배정한 IP주소를 승낙한다고 알려주는 DHCPOFFER메시지를 응답한다.
-   4) DHCP Akknowledge : 서버는 클라이언트에게 DHCPACK메시지를 보내서 승낙한 IP주소를 배정했다고 응답한다.
+   4) DHCP Acknowledge : 서버는 클라이언트에게 DHCPACK메시지를 보내서 승낙한 IP주소를 배정했다고 응답한다.
         
 (3) ARP : Bridging Layer 3 Addressing to Layer 2 Addressing
  - 두 개의 호스트가 네트워크를 통해서 소통을 하려면 2계층은 데이터링크 계층을 통해 넘어오면서 IP패킷이 캡슐화되어야 한다.
@@ -53,23 +53,31 @@
  
 (5) Routing
  - 인터넷에서 우리는 어떻게 네트워크끼리 데이터를 주고받는지 정확히 말하면 어떤 경로를 통하여 데이터를 주고받는지 알 필요가 있다.
+ - 이러한 네트워크의 경로를 찾는 알고리즘은 여러가지가 있지만 여기서는 대표적인 몇개의 알고리즘만을 소개하겠다.
+   1) OSPF(Open Shortest Path First) : 네트워크 토폴리지에 대한 정보를 주고받고 데이터 전송에 가장 효율적인 경로를 찾는 알고리즘이다. 매 시간마다 네트워크에 대한 정보 업데이트를 받고 그에 맞는 최적의 경로를 알려준다.
+   2) EIGRP(Enhanced Interior Gateway Protocol) : 시스코 소유의 라우팅 프로토콜로 다른 라우팅 알고리즘들의 여러 면을 결합시켜 만든 알고리즘이다. 네트워크와 정보를 주고받으며 대역폭이나 딜레이 시간 같은 비용을 따지면서 제일 효율적인 경로를 추천한다.
+   3) BGP(Border Gateway Protocol) : 인터넷에서 주로 사용되는 라우팅 프로토콜로 네트워크 사이에서 정보를 주고받게 하고 경로를 만들어준다. 다수의 네트워크를 경유하더라도 안전성을 확보해준다.
+   4) RIP(Routing Information Protocol) : 소규모 네트워크에서 사용하는 간단한 라우팅 프로토콜로 정보를 주고받기 위해서 홉스라고 불리는 정보를 공유한다. 그리고 홉스의 숫자가 얼마인지에 따라 경로를 설정한다.
 
 (6) NAT
- - sudo ./flag_hunt.sh : 루트계정으로 해당 파일을 실행. 권한을 다 무시하고 열 수 있다.
+ - IPv4는 약 40억개의 기기들에 IP주소를 부여할 수 있지만 현대화로 인해 사용하는 기기들의 수가 기하급수적으로 상승하기 시작하면서 IPv4주소 공간이 빠르게 고갈되고 있다.
+ - 이러한 고갈 문제에 대한 하나의 해답이 NAT(Network Address Translation)이다.
+ - NAT의 발상은 회사나 공공 기관 같은 집단에서 하나의 공공 IP가 여러 개의 사설 IP를 묶어주고 관리할 수 있다는 점에서 생겨났다.
+ - 여러 개의 사설 IP들을 통합해서 인터넷과 연결하기에 라우터의 도움을 받는다. 자신이 가지고 있는 IP주소가 다를지라도 인터넷 관점에서 본 IP들의 주소는 같다.
 
 (7) Closing Notes
  - 이제까지 뭘 배웠는지에 대한 간단한 복습
 
 
 ## 실무 적용 가능성
- - 리눅스에 사용하는 간단한 명령어부터 쉥에 대한 조작 명령어, 리눅스에서 스크립트를 작성하는 법까지 배웠는데 현장에서는 리눅스를 많이 쓴다고 하니 오늘 배운 지식은 잊어버리더라도 금방 다시 떠올릴 수 있게 해야한다.
- - 현장에서 컴파일러로 무엇을 쓸지는 알 수 없지만 컴파일러 없이도 스크립트를 작성할 수 있는 능력을 현장에서 중요하게 볼 것 같다.  
+ - 오늘 베운 내용들(DHCP, NAT, ARP 등)은 이론적인 부분들이 많았다. 그래서 실무에서 직접적으로 사용할 일은 없을 것 같다. 생각해보자면 보고서를 작성하는 정도가 아닐까 생각해본다.
+ - 내가 가고 싶은 진로인 보안관제(SOC)에서는 사용할 일이 없더라도 알아야 하는 내용이니 외우는 것이 좋다고 생각한다. 
 
 
 ## 느낀 점
- - 요즘 너무 스크립트 작성같은 것을 등한시해서 작성하는데 어려움이 많았다.
- - 리눅스에 대해 기초적이고 개념적인 것만 배웠는데 이렇게 쉘을 통해서 실습을 하니 예전 처음 코딩했을 때가 생각났다.
- - 요즘 들어 정보보안이라는 진로에 대해 의구심이 많이 생겼으나 이번 실습으로 인하여 그러한 의구심이 조금은 해소된 느낌이 들었다.
+ - 이론적인 부분이라 그런지 정보보안기사나 네트워크관리사를 준비할 때 많이 보고 그만큼 사전 지식이 있어 배우는데 크게 어렵지는 않았다.
+ - 이러한 것들을 배우면서 학습을 하고 진도를 나가다 보니 공부하면서 재미있다는 감정이 들기 시작하였다.
+ - 이렇게 학습을 진행하다보면 언젠가는 내가 바랐던 SOC취업을 할 수 있을 것만 같다.
     
 ## 실습 화면 기록
-![실습 결과](images/Linux_Shells.png)
+![실습 결과](images/Networking_Essentials.png)
