--- a/Cyber_Security_101/10.Networking_Core_Protocols.md
+++ b/Cyber_Security_101/10.Networking_Core_Protocols.md
@@ -22,7 +22,7 @@
    2) AAAA record : A record와 유사하지만, IPv6주소를 사용한다는 것에 차이점이 존재한다. AAAA는 순서대로 각각 Address, Authentication, Authorization, Accounting을 의미한다.
    3) CNAME record : 도메인 이름을 다른 도메인 이름과 연결하는 역할을 한다.
    4) MX record : 도메인을 관리하는 메일 서버를 관리하는 역할을 한다.
- - (images/Networking_Essentials.png)
+ - !(images/Networking_Essentials.png)
         
 (3) WHOIS
  - 두 개의 호스트가 네트워크를 통해서 소통을 하려면 2계층은 데이터링크 계층을 통해 넘어오면서 IP패킷이 캡슐화되어야 한다.
