--- a/Cyber_Security_101/10.Networking_Core_Protocols.md
+++ b/Cyber_Security_101/10.Networking_Core_Protocols.md
@@ -22,26 +22,23 @@
    2) AAAA record : A record와 유사하지만, IPv6주소를 사용한다는 것에 차이점이 존재한다. AAAA는 순서대로 각각 Address, Authentication, Authorization, Accounting을 의미한다.
    3) CNAME record : 도메인 이름을 다른 도메인 이름과 연결하는 역할을 한다.
    4) MX record : 도메인을 관리하는 메일 서버를 관리하는 역할을 한다.
- - !(images/Networking_Essentials.png)
+ - [](images/(2).png)
         
 (3) WHOIS
- - 두 개의 호스트가 네트워크를 통해서 소통을 하려면 2계층은 데이터링크 계층을 통해 넘어오면서 IP패킷이 캡슐화되어야 한다.
- - 데이터 링크 계층은 이더넷 (IEEE 802.3)과 와이파이(IEEE 802.11)를 사용한다.
- - 이더넷과 와이파이를 사용할 때 MAC주소를 통해 사용자를 판별한다. 하지만 통신하는 때마다 MAC주소를 확인하지는 않는다.
- - 통신할 시 MAC주소가 필요하면서 매 통신마다 필요 없다는 것이 무슨 의미일까? 이 문제의 해답은 IP주소에 있다.
- - 시작하기 전에, 이더넷 프레임의 헤더는 다음과 같은 정보를 가진다.
-   1) Destination MAC address
-   2) Source MAC address
-   3) Type (IPv4 in this case)
- - Address Resolutin Protocol(ARP)는 이더넷에 접속해있는 다른 기기의 MAC address를 찾을 수 있게 한다.
- - ARP의 통신 방식은 DHCP와 유사하다. DHCP를 생각해보면 쉽게 이해할 수 있다.
-   1) 클라이언트가 어딘가에 있을 서버를 향해 A IPaddress에 대한 MAC address가 무엇인지 물어보는 ARP Request를 브로드캐스트한다.
-   2) 서버는 클라이언트에게 답변이 담긴 ARP Reply를 보낸다.
+ - 이렇게 도메인 이름이 IP주소로 매핑되어 표현되어진다면 어떤 레코드를 사용할건지 부여하는 권한이 필요하다.
+ - WHOIS 프로토콜은 이러한 권한을 도메인 이름에 부여하는 프로토콜이다. 
+ - 도메인 이름을 사용하기 위해서는 연간 비용을 내고 사용해야 한다. 하지만 타인에게 이러한 지불 정보를 비롯한 사적인 정보를 공개하고 싶지 않을 때 WHOIS 레코드를 사용하여 그러한 정보를 감춘다.
+ - [](images/(3).png)
 
 (4) HTTP(S) : Accessing the Web
- - Internet Control Message Protocol(ICMP)는 주로 네트워크 진단이나 오류 보고 시에 사용한다. 다음 두 명령어는 ICMP에 의존적이고, 네트워크 트러블슈팅이나 네트워크 보안의 기초이다.
-   1) ping : 이 명령어는 ICMP를 사용하여 목적지까지의 연결성을 테스트하고 round-trip time(RTT)를 측정한다. 바꿔 말하면, 대상이 살아있는지 대답은 할 수 있는지 알아볼 떄 사용한다. (ICMP Echo Request, ICMP Echo Reply)
-   2) traceroute : 이 명령어는 리눅스나 유닉스 계열 운영체제에서는 traceroute, 윈도우 운영체제에서는 trace불린다. 호스트에서 목적지로 가는 길을 찾기 위해 ICMP를 사용한다.
+ - 우리가 웹서핑을 위해 브라우저를 사용하면 HTTP(Hypertext Transfer Protocol), HTTPS(HTTP for Secure)프로토콜이 사용된다.
+ - 이 프로토콜들은 웹 브라우저와 웹 서버간의 의사소통 방법을 정의하고 TCP 연결 방식을 사용한다.
+ - 웹 브라우저가 웹 서버에 보내는 명령이나 메소드 중 일부는 다음과 같다.
+   1) GET : HTML파일이나 이미지 파일과 같은 데이터들을 웹서버로부터 획득한다.
+   2) POST : 파일을 업로드하거나 형식을 제출하듯 새로운 데이터를 서버에 올리는 것을 허락하는 메소드이다.
+   3) PUT : 서버에 새로운 정보를 생성할 때나 기존의 정보를 업데이트하거나 덮어씌울 때 사용하는 메소드이다.
+   4) DELETE : 서버에 있는 특정 파일이나 정보를 삭제할 때 사용하는 메소드이다.
+ - HTTP, HTTPS는 주로 TCP 80, TCP 443번 포트를 사용하고, 그외에도 가끔 8080이나 8443번 포트도 사용한다.
  
 (5) FTP : Transfering Files
  - 인터넷에서 우리는 어떻게 네트워크끼리 데이터를 주고받는지 정확히 말하면 어떤 경로를 통하여 데이터를 주고받는지 알 필요가 있다.
