--- a/Cyber_Security_101/10.Networking_Core_Protocols.md
+++ b/Cyber_Security_101/10.Networking_Core_Protocols.md
@@ -39,14 +39,18 @@
    3) PUT : 서버에 새로운 정보를 생성할 때나 기존의 정보를 업데이트하거나 덮어씌울 때 사용하는 메소드이다.
    4) DELETE : 서버에 있는 특정 파일이나 정보를 삭제할 때 사용하는 메소드이다.
  - HTTP, HTTPS는 주로 TCP 80, TCP 443번 포트를 사용하고, 그외에도 가끔 8080이나 8443번 포트도 사용한다.
- 
+
 (5) FTP : Transfering Files
- - 인터넷에서 우리는 어떻게 네트워크끼리 데이터를 주고받는지 정확히 말하면 어떤 경로를 통하여 데이터를 주고받는지 알 필요가 있다.
- - 이러한 네트워크의 경로를 찾는 알고리즘은 여러가지가 있지만 여기서는 대표적인 몇개의 알고리즘만을 소개하겠다.
-   1) OSPF(Open Shortest Path First) : 네트워크 토폴리지에 대한 정보를 주고받고 데이터 전송에 가장 효율적인 경로를 찾는 알고리즘이다. 매 시간마다 네트워크에 대한 정보 업데이트를 받고 그에 맞는 최적의 경로를 알려준다.
-   2) EIGRP(Enhanced Interior Gateway Protocol) : 시스코 소유의 라우팅 프로토콜로 다른 라우팅 알고리즘들의 여러 면을 결합시켜 만든 알고리즘이다. 네트워크와 정보를 주고받으며 대역폭이나 딜레이 시간 같은 비용을 따지면서 제일 효율적인 경로를 추천한다.
-   3) BGP(Border Gateway Protocol) : 인터넷에서 주로 사용되는 라우팅 프로토콜로 네트워크 사이에서 정보를 주고받게 하고 경로를 만들어준다. 다수의 네트워크를 경유하더라도 안전성을 확보해준다.
-   4) RIP(Routing Information Protocol) : 소규모 네트워크에서 사용하는 간단한 라우팅 프로토콜로 정보를 주고받기 위해서 홉스라고 불리는 정보를 공유한다. 그리고 홉스의 숫자가 얼마인지에 따라 경로를 설정한다.
+ - 웹페이지의 정보를 가져오는 HTTP프로토콜과 다르게 FTP(File Transfer Protocol)은 이름 그대로 파일을 전송할 때 사용한다.
+ - FTP는 파일 전송에 아주 효율적이고 동등한 상태라면 HTTP보다 더 빠른 속도를 낼 수 있다.
+ - FTP에서 정의하는 명령어의 예는 다음과 같다.
+   1) USER : 사용자 이름을 입력할 때 사용한다.
+   2) PASS : 비밀번호를 입력하는데 사용한다.
+   3) RETR : FTP서버로부터 사용자에게로 파일을 다운로드할 떄 사용한다.
+   4) STOR : 클라이언트로부터 FTP서버로 파일을 업로드할 때 사용한다.
+ - FTP서버는 TCP 21번 포트를 기본적으로 사용하고 데이터 전송은 다른 연결을 사용하여 수행한다.
+ - [](images/(4).png)
+   
 
 (6) SMTP : Sending Email
  - IPv4는 약 40억개의 기기들에 IP주소를 부여할 수 있지만 현대화로 인해 사용하는 기기들의 수가 기하급수적으로 상승하기 시작하면서 IPv4주소 공간이 빠르게 고갈되고 있다.
