--- a/Cyber_Security_101/10.Networking_Core_Protocols.md
+++ b/Cyber_Security_101/10.Networking_Core_Protocols.md
@@ -53,13 +53,30 @@
    
 
 (6) SMTP : Sending Email
- - IPv4는 약 40억개의 기기들에 IP주소를 부여할 수 있지만 현대화로 인해 사용하는 기기들의 수가 기하급수적으로 상승하기 시작하면서 IPv4주소 공간이 빠르게 고갈되고 있다.
- - 이러한 고갈 문제에 대한 하나의 해답이 NAT(Network Address Translation)이다.
- - NAT의 발상은 회사나 공공 기관 같은 집단에서 하나의 공공 IP가 여러 개의 사설 IP를 묶어주고 관리할 수 있다는 점에서 생겨났다.
- - 여러 개의 사설 IP들을 통합해서 인터넷과 연결하기에 라우터의 도움을 받는다. 자신이 가지고 있는 IP주소가 다를지라도 인터넷 관점에서 본 IP들의 주소는 같다.
+ - SMTP(Simple Mail Transfer Protocol)은 어떤 방식으로 사용자와 서버가 대화를 할지 어떤 방식으로 사용자들끼리 메일을 주고받을지를 정의하는 프로토콜이다.
+ - 간단한 비유를 들자면 SMTP는 네가 우체국에 가서 소포를 전하는 방식을 떠올리면 된다. 우체국에 가서 직원에게 어디에 보낼건지 보내는 사람은 누구인지 같은 것을 네트워크 상에서 실행한다고 보면 된다.
+ - 메일 사용자가 SMTP서버로 메일을 전송할 때 흔히 쓰는 명령어는 다음과 같다.
+   1) HELO, EHLO : SMTP세션을 시작한다.
+   2) MAIL FROM : 송신자의 이메일 주소를 특정한다.
+   3) RCPT TO : 수신자의 이메일 주소를 특정한다.
+   4) DATA : 사용자가 보내는 이메일 메시지의 내용을 나타낸다.
+   5) . : 이메일 메시지가 종료되었다는 것을 나타낸다.
+ - SMTP는 주로 TCP 25번 포트를 사용한다.
+ - [](images/(5).png)
 
 (7) POP3 : Receiving Email 
- - 이제까지 뭘 배웠는지에 대한 간단한 복습
+ - POP3(Post Office Protocol version 3)는 사용자가 메일 서버와 소통하고 이메일 메시지를 받을 수 있도록 하는 프로토콜이다.
+ - 기술적으로 깊이 들어갈 필요 없이, 사용자는 SMTP로 이메일을 보내고 POP3로 이메일을 받는다. SMTP는 우체국이고 POP3는 가정집에 있는 우체통이다.
+ - POP3에서 주로 사용하는 명령어들은 다음과 같다.
+   1) USER <username> : 사용자를 특정한다.
+   2) PASS <password> : 사용자 비밀번호를 공급한다.
+   3) STAT : 메세지의 수와 크기 정보를 요청한다.
+   4) LIST : 모든 메시지와 메시지 크기를 목록으로 보여준다.
+   5) RETR <message_number> : 특정 메시지를 받는다.
+   6) DELE <message_number> : 특정 메시지의 삭제 마크를 남긴다.
+   7) QUIT : 삭제와 같은 변경사항을 적용한 뒤 POP3세션을 종료한다.
+ - POP3프로토콜은 기본적으로 TCP 110번 포트를 사용한다.
+ - [](images/(6).png)
 
 (8) IMAP : Synchronizing Email
 (9) Conclusion
