--- a/pre-security/02.Defensive_Security_Intro.md
+++ b/pre-security/02.Defensive_Security_Intro.md
@@ -1,9 +1,10 @@
-## 🧩 TryHackMe: Defensive Security Intro
+## TryHackMe:[Intro] Security Operations & Offensive Tolling Basics
 
-## 📌 실습 일시
-- 2024-05-12
 
-## 🔐 실습 주제
+## 실습 일시
+- 2025-05-12 (수정날짜 : 2026-01-30)
+
+## 실습 주제 및 내용
 1) Security Operations Center (SOC)
 - 취약점 분석과 정책 위반과 승인되지 않은 활동 탐지를 주로 하는 정보보안 전문가들의 집합
  
