--- a/pre-security/01.[Intro] _Security_Operations_&_Offensive_Tolling_Basics.md
+++ b/pre-security/01.[Intro] _Security_Operations_&_Offensive_Tolling_Basics.md
@@ -1,4 +1,4 @@
-## TryHackMe:[Intro] Security Operations & Offensive Tolling Basics
+## TryHackMe:[Intro] Security Operations & Offensive Tooling Basics
 
 
 ## 실습 일시
@@ -6,14 +6,14 @@
 
 
 ## 실습 주제 및 내용
-(1) Security Operations Center (SOC)
+### (1) Security Operations Center (SOC)
  - 취약점 분석과 정책 위반과 승인되지 않은 활동 탐지를 주로 하는 정보보안 전문가들의 집합이다.
 
-(2) Threat Intelligence
+### (2) Threat Intelligence
  - 현존하는 혹은 잠재적인 적에 관한 정보(Intelligence), 시스템에 해를 끼치는 행위(Threat)이다.
  - 회사를 더 좋게 하기 위해서 잠재적 적에 대한 정보를 모으는 행위이다.
 
-(3) Digital Forensics and Incident Response (DFIR)
+### (3) Digital Forensics and Incident Response (DFIR)
   1) Digital Forensics
   - 포렌식이란 범죄의 증거를 조사하기 위한 응용과학의 한 분야로, 디지털 포렌식은 사이버 범죄의 증거를 컴퓨터나 스마트폰에서 조사하는 포렌식의 한 종류이다.
   - 증거는 주로 파일시스템, 시스템 메모리, 시스템 로그, 메모리 로그에서 찾는다.
