--- a/pre-security/01.[Intro] _Security_Operations_&_Offensive_Tolling_Basics.md
+++ b/pre-security/01.[Intro] _Security_Operations_&_Offensive_Tolling_Basics.md
@@ -22,7 +22,7 @@
   - 공격에 의한 피해를 최소화하거나 복구 시간의 단축을 목표로 삼는다.
   3) 진행 단계 : Preparation -> Detection and Analysis -> Containment, Eradication and Recovery -> Post-Incident Activity -> Preparation
 
-(4) gobuster 
+### (4) gobuster 
  - 간단히 말하면 wordlist에 있는 수천 개의 단어를 웹 서버에 던져 응답을 보는 즉, 사용자가 찾기를 원하는 파일이나 서브 도메인을 찾을 때까지 계속해서 웹서버에 노크를 하는 도구이다.   
  - 명령어 예시 : gobuster -u http://fakebank.thm -w wordlist.txt dir
  - 옵션 설명
@@ -32,9 +32,10 @@
 
 
 ## 실무 적용 가능성
- (1) DFIR의 중요성 : 사이버 공격 발생 시 시스템을 재부팅하는 것이 아니라 공격이 어디서 발생되었는지 탐지하고 어떤 공격인지 분석한 뒤에 공격 지점을 네트워크로 부터 격리하고 로그를 보존하는 것만이 피해 확산을 막을 수 있다.
+### (1) DFIR의 중요성
+  - 사이버 공격 발생 시 시스템을 재부팅하는 것이 아니라 공격이 어디서 발생되었는지 탐지하고 어떤 공격인지 분석한 뒤에 공격 지점을 네트워크로 부터 격리하고 로그를 보존하는 것만이 피해 확산을 막을 수 있다.
 
- (2) gobuster의 탐지
+### (2) gobuster의 탐지
   - 공격자가 gobuster를 사용할 시 도구의 특성으로 인해 짧은 시간에 수천 번의 HTTP 요청이 발생한다.
   - 따라서 관리자는 웹 로그(Web Access Log)에서 동일 IP가 초당 수십 회 이상  404 Not Found 에러를 발생시킨다면 공격으로 간주하고 해당 IP를 차단시켜야 한다.
   - User-Agent 헤더에 gobuster라는 문자열이 그대로 노출되어있는 경우도 많으므로, 이를 탐지규칙(Snort/Suricata Rule)으로 등록하여 차단할 수 있다.
