--- a/pre-security/04.What_is_Networking.md
+++ b/pre-security/04.What_is_Networking.md
@@ -1,29 +1,38 @@
-## TryHackMe: What is Networking?
+## TryHackMe: [Network] Network Architecture & Protocol Security Analysis
+
 
 ## 실습 일시
-- 2024-05-13
+- 2025-05-13 (수정일자 : 2026-01-30)
 
-## 실습 주제
-(1) What is Network?
-(2) What is Internet?
-(3) What is IP?수신시간
-(4) PING
 
-## 사용 도구 및 명행령어
-ping IP Address(8.8.8.8) or Website URl
+## 실습 주제 및 내용
+### 1) 네트워크 인프라와 토폴로지
+1. LAN 토폴로지(Toploogy: 망 구성 형태)
+   - 스타(Star)형 : 중앙에 스위치(Switch)가 있고 토폴리지 내의 모든 PC가 여기에 연결된다.
+     - 장점 : 스위치에 연결되어 있는 PC 하나가 고장나도 다른 PC들은 멀쩡하다.
+     - 보안/운영 취약점 : SPOF(Single Point of Failure, 단일 실패 지점)이 존재한다. 중앙에 있는 스위치가 고장나버리면 전체 네트워크가 마비된다. 그래서 중요 네트워크의 경우에는 스위치를 2대(이중화)를 두어 리스크를 관리한다.
+   - 버스(Bus)형 : 하나의 긴 케이블(백본)에 PC들이 빨래집게처럼 매달려 있는 방식이다.(오래된 방식)
+     - 장점 : 설치 시의 케이블이 가장 적게 들고 설치 비용이 저렴하고 소규모로 네트워크를 구성할 시 가장 빠르게 네트워크 구성이 가능하다.
+     - 보안/운영 취약점 : 메인 케이블(백본)에 흐르는 데이터는 연결된 모든 PC에 전달되기 때문에 만약 공격자가 랜카드를 무차별 모드(Promiscuous Mode)로 켜두면 남의 아이디/비밀번호 패킷을 전부 수집할 수 있다. 또한, 케이블의 끝부분에 문제가 생기거나 백본 케이블이 잘려버리면 전체 통신이 마비된다.  
+   - 망(Mesh)형 :
+   - 링(Ring)형 : 
+3. 스위치(Switch) vs 라우터(Router)
 
-## 배운 점
-- 네트워크는 하나의 관계이다. 취미 모임, 달리기 모임, 교통신호체계 전부 관계이자 하나의 네트워크이다. 단, 컴퓨터 공학에서의 네트워크는 그 관계가 컴퓨터나 핸드폰 등으로 정의된 것을 말한다.
-- 인터넷이란 이런 소규모 네트워크들을 하나의 큰 네트워크로 묶는 시스템이다. network들을 이어주기에 public network로도 불린다.
-- IP는 크게 Private IP와 Public IP로 나뉜다. 
-- Private IP는 기기 자체에 등록되어 있는 IP로 기기 사이의 네트워크에서 서로를 구분하는 역할을 한다.
-- Public IP는 소위 통신사(ISP, Internet Service Provider)가 사용자에게 부여하는 IP로 기기들이 전부 다를지라도 사용자가 같으면 Public IP가 같다.
-- PING은 ICMP패킷을 이용하는 가장 기본적인 도구로 네트워크에 연결이 되어있는지 안되어있는지 패킷수신속도를 측정하여 연결속도를 알려주는 도구이다.
+### 2) 핵심 프로토콜의 보안적 허점
+1. ARP(Address Resolutin Protocol)
+2. DHCP(Dynamic Host Configuration Protocol)
+3. ICMP(Internet Control Message Protocol, Ping)
 
-## 느낀 점
-- 이론서로 요약한 개념이 아닌 풀어 쓴 글을 통해 학습하여 이해는 확실히 쉬웠다.
-- 영어를 통해 공부하니 생각보다 진도가 나가지 않았다. 꾸준히 하면 좋아질 것 같다.
-- 들어보고 외우는 것과 이해하는 것의 차이를 알았다.
+### 3) OSI 7계층과 보안 장비 매핑
+1. 하위 계층(Physical ~ Transport) : 인프라 보안
+2. 상위 계층(Session ~ Application) : 애플리케이션 보안
+
+
+## 실무 적용 가능성
+
+
+## 배움 및 회고
+
 
 ## 실습 화면 기록
 ![실습 결과](images/What_is_Networking.png)
