--- a/pre-security/04.What_is_Networking.md
+++ b/pre-security/04.What_is_Networking.md
@@ -14,9 +14,19 @@
    - 버스(Bus)형 : 하나의 긴 케이블(백본)에 PC들이 빨래집게처럼 매달려 있는 방식이다.(오래된 방식)
      - 장점 : 설치 시의 케이블이 가장 적게 들고 설치 비용이 저렴하고 소규모로 네트워크를 구성할 시 가장 빠르게 네트워크 구성이 가능하다.
      - 보안/운영 취약점 : 메인 케이블(백본)에 흐르는 데이터는 연결된 모든 PC에 전달되기 때문에 만약 공격자가 랜카드를 무차별 모드(Promiscuous Mode)로 켜두면 남의 아이디/비밀번호 패킷을 전부 수집할 수 있다. 또한, 케이블의 끝부분에 문제가 생기거나 백본 케이블이 잘려버리면 전체 통신이 마비된다.  
-   - 망(Mesh)형 :
-   - 링(Ring)형 : 
-3. 스위치(Switch) vs 라우터(Router)
+   - 망(Mesh)형 : 모든 노드(PC/서버)가 서로 그물처럼 1:1로 연결된 형태이다.(주로 인테넷 백본이나 중요 서버실에서 사용)
+     - 장점 : 회선 하나가 끊겨도 다른 경로로 우회해갈 수 있다.(고가용성:High Availability) 데이터가 갈 수 있는 경로가 많아 병목 현상이 적고 전용선으로 연결되므로 스니핑이 다른 토폴로지에 비해 상대적으로 어렵다.
+     - 보안/운영 취약점 : 연결이 너무 많고 복잡해서 관리자가 실수로 라우팅 설정을 잘못하면 데이터가 엉뚱한 곳으로 가거나 루핑(Looping)이 발생할 수 있다. 토폴로지를 형성하는데 필요한 케이블의 양이 많아 설치 비용이 비싸다.
+   - 링(Ring)형 : 연결되어 있는 PC가 고리(Ring)의 형태로 있다. 데이터의 전송방향은 단 방향이다.
+     - 장점 :  토큰(Token)이라는 권한을 가진 PC만이 말을 할 수 있어 데이터끼리의 충돌이 없고 모든 PC가 공평한 전송 기회를 가진다.
+     - 보안/운영 취약점 : 데이터를 전송하기 위해서는 출발지부터 목적지 사이에 있는 모든 PC들을 거쳐가야 하기 때문에 공격자가 하나의 PC만 해킹해도 토폴로지 전체의 데이터를 스니핑하거나 변조할 수 있다. SPOF(Single Point of failure, 단일 실패 지점)이 있어 한 군데만 이상이 있어도 전체 네트워크가 마비된다.
+2. 스위치(Switch) vs 라우터(Router)
+   - L2 스위치 : LAN(Local Area Network)에서의 통신을 담당한다.
+     - 식별자 : IP주소는 보지 않고 MAC주소만으로 식별한다.
+     - 보안 취약점 : 스위치는 데이터를 목적지로만 전송하기 때문에 도청이 어렵지만 공격자가 MAC Flooding공격을 사용하여 스위치의 메모리를 가득 채우면, 스위치가 더미 허브가 되어 데이터를 모든 포트로 뿌리는데 이때 도청이 가능해진다.
+   - L3 라우터 : WAN(Worldwide Area Network)을 연결하는 역할을 한다.
+     - 식별자 : IP주소를 통해 식별한다.
+     - 보안 취약점 : ACL(Access Control List)을 통해 IP/Port 기반의 접근 통제를 수행하고 단순히 차단만 하는 것이 아니라 Ingress Filtering을 통해 외부에서 유입되는 사설 IP(RFC 1918)대역을 차단하여 IP Spoofing을 방지해야 한다.
 
 ### 2) 핵심 프로토콜의 보안적 허점
 1. ARP(Address Resolutin Protocol)
